--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "voyage-actually",
+  "name": "supreme-training",
   "version": "0.0.1",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
     "express": "latest",
+    "express-static": "^1.1.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   }
